syntax = "proto3";

package catalog;
option go_package="genproto/catalog_service";
import "catalog.proto";

service FeaturedListService {
  rpc Create(FeaturedListCreateRequest) returns (FeaturedListGetResponse) {}
  rpc Update(FeaturedListUpdateRequest) returns (FeaturedListGetResponse) {};
  rpc Find(FeaturedListFindRequest) returns (FeaturedListsFindResponse) {};
  rpc FindHomePageContent(HomePageContentRequest) returns (HomePageContentResponse) {};
  rpc Get(FeaturedListGetRequest) returns (FeaturedListGetResponse) {};
  rpc Delete (FeaturedListDeleteRequest) returns (Empty) {};
}

message FeaturedListCreateRequest {
  string title = 1;
  string products = 2;
  string lang = 3;
  int64 order = 4;
  bool active = 5;
  string description = 6;
}
message FeaturedListUpdateRequest {
  string  id = 1;
  string title = 2;
  string products = 3;
  string lang = 4;
  int64 order = 5;
  bool active = 6;
  string description = 7;
}

message FeaturedListGetRequest {
  string  id = 1;
  string lang = 2;
  string slug = 3;
}

message FeaturedListDeleteRequest {
  string  id = 1;
  string slug = 2;
}

message FeaturedListFindRequest {
  int32  page = 1;
  int32  limit = 2;
  string lang = 3;
  bool active = 4;
  string search = 5;
}

message FeaturedListGetResponse {
  FeaturedList featured_list = 1;
}

message FeaturedListsFindResponse {
  repeated FeaturedList featured_lists = 1;
  int64 count = 2;
}

message HomePageContentRequest {
  string lang = 1;
}

message HomePageContentResponse {
  repeated FeaturedList featured_lists = 1;
}